--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <div class="video-overlay header-text">
             <div class="caption">
                 <h1></h1>
-                <h2>يلهم المستقبل الحديث <br><em>خدمات الكترونية متميزة</em></h2>
+                <h2>يلهم المستقبل <br><em>خدمات الكترونية متميزة</em></h2>
                 <div class="main-button scroll-to-section">
                     <a href="#top">البنك الأول في اليمن</a>
                 </div>
